fixed z-index problem

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -150,7 +150,7 @@
 }
 .boxbody{
   position: absolute;
-  z-index: 4;
+  /* z-index: 4; */
   transition: .5s ease;
   background-color: rgba(0, 0, 0, 0.637);
   left: 0%;
